objects/infy_dm__Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>infy_dm__Job_Name__c</fullName>
        <description>It is used to store the job name associated with the error</description>
        <label>Job Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infy_dm__Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infy_dm__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>infy_dm__Time_Stamp__c</fullName>
        <description>This field is used to store the datetime when error was logged.</description>
        <label>Time Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>infy_dm__Type_Name__c</fullName>
        <label>Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>infy_dm__All</fullName>
        <columns>NAME</columns>
        <columns>infy_dm__Job_Name__c</columns>
        <columns>infy_dm__Time_Stamp__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>infy_dm__Errors</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>infy_dm__Line_Number__c</field>
            <operation>equals</operation>
        </filters>
        <label>Errors</label>
    </listViews>
    <listViews>
        <fullName>infy_dm__Exceptions</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>infy_dm__Line_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Exceptions</label>
    </listViews>
    <nameField>
        <label>Error L Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>